--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Page created with React and ChakraUI, Developer by Camilo Mora, Api provided by Marvel API.">
+  <meta name="keywords" content="React, Vite, Marvel, Single Aplication, ChakraUI">
   <title>Frikie Marvel</title>
 </head>
 
